--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,15 +14,20 @@
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
+		"@radialarray/eslint-config-custom": "*",
+		"@radialarray/tailwind-config": "*",
 		"@types/node": "18.6.3",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
+		"cssnano": "^5.1.12",
 		"eslint": "8.21.0",
-		"eslint-config-custom": "*",
 		"eslint-config-next": "12.2.3",
 		"postcss": "^8.4.14",
-		"tailwind-config": "*",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-import": "^14.1.0",
+		"postcss-preset-env": "^7.7.2",
 		"tailwindcss": "^3.1.7",
 		"typescript": "4.7.4"
-	}
+	},
+	"type": "module"
 }
