--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -1,15 +1,11 @@
 {
-	"name": "tailwind-config",
+	"name": "@radialarray/tailwind-config",
 	"version": "0.0.0",
 	"author": "",
 	"description": "",
 	"private": true,
 	"main": "index.js",
 	"dependencies": {
-		"autoprefixer": "^10.4.8",
-		"cssnano": "^5.1.12",
-		"postcss-import": "^14.1.0",
-		"postcss-preset-env": "^7.7.2",
 		"tailwindcss": "^3.1.7"
 	}
 }
