--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-config-custom": "^0.0.0",
 		"eslint-config-prettier": "^8.5.0",
 		"husky": "^8.0.0",
+		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
 		"tslib": "^2.4.0",
 		"turbo": "^1.3.4",
@@ -37,5 +38,9 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+		"*.{css,html,json,js,jsx,ts,tsx,md}": "prettier --write"
 	}
 }
