--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ out/
 build
 dist
 
+# nextjs typescript types
+next-env.d.ts
+
 # misc
 .DS_Store
 *.pem
@@ -25,10 +28,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env
+.env.*
 .env.development
 .env.test
 .env.production
+!.env.example
 
 # turbo
 .turbo
