fix: change config of docker-fpm php for uploads

--- a/apps/cms/site_codelibrary.conf
+++ b/apps/cms/site_codelibrary.conf
@@ -6,7 +6,8 @@ server {
   access_log /var/log/nginx/access.log;
   index index.php;
   root /app;
-
+  # For bigger uploads needed
+  client_max_body_size 128M;
 
   location /assets {
     try_files $uri =404;
