--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,16 +9,33 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@code-hike/mdx": "^0.7.3",
+		"axios": "^0.27.2",
+		"html-react-parser": "^3.0.1",
 		"next": "12.2.3",
+		"ramda": "^0.28.0",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"rehype-document": "^6.0.1",
+		"rehype-format": "^4.0.1",
+		"rehype-parse": "^8.0.4",
+		"rehype-react": "^7.1.1",
+		"rehype-stringify": "^9.0.3",
+		"remark": "^14.0.2",
+		"remark-parse": "^10.0.1",
+		"remark-rehype": "^10.1.0",
+		"shiki": "^0.10.1",
+		"unified": "^10.1.2"
 	},
 	"devDependencies": {
 		"@radialarray/eslint-config-custom": "*",
 		"@radialarray/tailwind-config": "*",
+		"@types/mdast": "^3.0.10",
 		"@types/node": "18.6.3",
+		"@types/ramda": "^0.28.15",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
+		"@types/unist": "^2.0.6",
 		"cssnano": "^5.1.12",
 		"eslint": "8.21.0",
 		"eslint-config-next": "12.2.3",
