fix: fix environment variable name

--- a/apps/cms/Caddyfile
+++ b/apps/cms/Caddyfile
@@ -63,7 +63,7 @@
 # # }
 
 
-localhost, {$DEVELOPMENT_URL} {
+localhost, {$KIRBY_URL} {
 	root * /var/www/html/app
   encode gzip
   php_fastcgi php-fpm:9000
