--- a/apps/cms/.env.production.example
+++ b/apps/cms/.env.production.example
@@ -1,4 +1,4 @@
 # Should be the same as in docker-compose env variable for backend hosting.
-KIRBY_URL=https://example.com
+KIRBY_URL=example.com
 KIRBY_PANEL_INSTALL=true
 KIRBY_DEBUG=false
