--- a/apps/cms/.env.development.example
+++ b/apps/cms/.env.development.example
@@ -1,4 +1,4 @@
 # Should be the same as in docker-compose env variable for backend hosting.
-KIRBY_URL=backend.localhost
+KIRBY_HOST=backend.localhost
 KIRBY_PANEL_INSTALL=true
 KIRBY_DEBUG=true
