--- a/apps/cms/docker-compose-local.yml
+++ b/apps/cms/docker-compose-local.yml
@@ -8,7 +8,7 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - $PWD/Caddyfile:/etc/caddy/Caddyfile
+      - $PWD/Caddyfile-Local:/etc/caddy/Caddyfile
       - ./:/var/www/html/app
       - caddy_data:/data
       - caddy_config:/config
