--- a/apps/cms/docker-compose-traefik.yml
+++ b/apps/cms/docker-compose-traefik.yml
@@ -3,6 +3,7 @@ services:
   composer_installation:
     container_name: composer_installation
     image: composer
+    user: '1000:1000'
     volumes:
       - ./:/app
     command: composer install --ignore-platform-reqs
@@ -26,11 +27,11 @@ services:
     labels:
       - 'traefik.enable=true'
       - 'traefik.http.routers.kirby.entrypoints=web'
-      - 'traefik.http.routers.kirby.rule=Host(`${KIRBY_URL}`)'
+      - 'traefik.http.routers.kirby.rule=Host(`${KIRBY_HOST}`)'
       - 'traefik.http.middlewares.kirby-https-redirect.redirectscheme.scheme=https'
       - 'traefik.http.routers.kirby.middlewares=kirby-https-redirect'
       - 'traefik.http.routers.kirby-secure.entrypoints=websecure'
-      - 'traefik.http.routers.kirby-secure.rule=Host(`${KIRBY_URL}`)'
+      - 'traefik.http.routers.kirby-secure.rule=Host(`${KIRBY_HOST}`)'
       - 'traefik.http.routers.kirby-secure.tls=true'
       - 'traefik.http.routers.kirby-secure.tls.certresolver=letsencrypt'
       - 'traefik.http.routers.kirby-secure.service=kirby'
