--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -1,3 +1,5 @@
-API_URL=http://example.com
+API_HOST=example.com
+# Your image host could be different from your api host.
+API_IMAGE_HOST=example.com
 API_USER=username
 API_PASSWORD=password
