--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,17 @@
 	},
 	"dependencies": {
 		"@code-hike/mdx": "^0.7.3",
+		"@codesandbox/sandpack-react": "^1.5.4",
+		"@codesandbox/sandpack-themes": "^1.5.0",
 		"axios": "^0.27.2",
 		"html-react-parser": "^3.0.1",
 		"next": "12.2.5",
 		"ramda": "^0.28.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-markdown": "^8.0.3",
+		"react-player": "^2.10.1",
+		"react-syntax-highlighter": "^15.5.0",
 		"rehype-document": "^6.0.1",
 		"rehype-format": "^4.0.1",
 		"rehype-parse": "^8.0.4",
@@ -25,20 +30,24 @@
 		"remark-parse": "^10.0.1",
 		"remark-rehype": "^10.1.0",
 		"shiki": "^0.10.1",
+		"swiper": "^8.3.2",
 		"unified": "^10.1.2"
 	},
 	"devDependencies": {
 		"@radialarray/eslint-config-custom": "*",
 		"@radialarray/tailwind-config": "*",
+		"@types/dompurify": "^2.3.3",
 		"@types/mdast": "^3.0.10",
 		"@types/node": "18.6.3",
 		"@types/ramda": "^0.28.15",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
+		"@types/react-syntax-highlighter": "^15.5.4",
 		"@types/unist": "^2.0.6",
 		"cssnano": "^5.1.12",
 		"eslint": "8.21.0",
 		"eslint-config-next": "12.2.3",
+		"isomorphic-dompurify": "^0.20.0",
 		"postcss": "^8.4.16",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
