--- a/apps/cms/site/blueprints/site.yml
+++ b/apps/cms/site/blueprints/site.yml
@@ -6,7 +6,14 @@ columns:
     sections:
       pages:
         type: pages
-
+      navigation:
+        type: fields
+        fields:
+          navigation:
+            label: Navigation
+            type: navigation
+            levels: 5
+            help: Description of menu or where it is used
   meta:
     width: 1/3
     type: fields
