--- a/turbo.json
+++ b/turbo.json
@@ -3,17 +3,18 @@
 	"pipeline": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": ["dist/**", ".next/**"]
+			"outputs": ["dist/**"]
+		},
+		"web#build": {
+			"dependsOn": ["^build"],
+			"outputs": [".next/**"]
 		},
 		"lint": {
 			"outputs": []
 		},
 		"dev": {
 			"cache": false
-		},
-		"deploy": {
-			"dependsOn": ["build", "lint"],
-			"outputs": []
 		}
-	}
+	},
+	"globalDependencies": ["tsconfig.json", ".env.*"]
 }
