--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,9 @@
 		"@code-hike/mdx": "^0.7.4",
 		"@codesandbox/sandpack-react": "^1.5.4",
 		"@codesandbox/sandpack-themes": "^1.5.0",
+		"@tailwindcss/typography": "^0.5.4",
 		"axios": "^0.27.2",
+		"classnames": "^2.3.1",
 		"html-react-parser": "^3.0.4",
 		"next": "12.2.5",
 		"ramda": "^0.28.0",
