--- a/apps/cms/deploy/traefik-proxy/Dockerfile
+++ b/apps/cms/deploy/traefik-proxy/Dockerfile
@@ -1,4 +1,5 @@
 FROM php:8-fpm
+
 RUN apt-get update && apt-get install -y \
   libfreetype6-dev \
   libjpeg62-turbo-dev \
@@ -8,4 +9,5 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /srv
 
+RUN chown -R 1000:1000 /srv
 USER 1000
