--- a/apps/cms/deploy/local/Dockerfile
+++ b/apps/cms/deploy/local/Dockerfile
@@ -1,4 +1,6 @@
 FROM php:8-fpm
+
+
 RUN apt-get update && apt-get install -y \
   libfreetype6-dev \
   libjpeg62-turbo-dev \
@@ -7,5 +9,7 @@ RUN apt-get update && apt-get install -y \
   && docker-php-ext-install -j$(nproc) gd
 
 WORKDIR /srv
+
+RUN chown -R 1000:1000 /srv
 
 USER 1000
