--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,18 +10,19 @@
 	},
 	"dependencies": {
 		"@code-hike/mdx": "^0.7.4",
-		"@codesandbox/sandpack-react": "^1.5.4",
-		"@codesandbox/sandpack-themes": "^1.5.0",
-		"@tailwindcss/typography": "^0.5.4",
+		"@codesandbox/sandpack-react": "^1.8.6",
+		"@codesandbox/sandpack-themes": "^1.6.0",
+		"@tailwindcss/typography": "^0.5.7",
 		"axios": "^0.27.2",
-		"classnames": "^2.3.1",
+		"classnames": "^2.3.2",
+		"cmdk": "^0.1.20",
 		"html-react-parser": "^3.0.4",
 		"next": "12.2.5",
 		"ramda": "^0.28.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-markdown": "^8.0.3",
-		"react-player": "^2.10.1",
+		"react-player": "^2.11.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-document": "^6.1.0",
 		"rehype-format": "^4.0.1",
@@ -32,7 +33,7 @@
 		"remark-parse": "^10.0.1",
 		"remark-rehype": "^10.1.0",
 		"shiki": "^0.10.1",
-		"swiper": "^8.3.2",
+		"swiper": "^8.4.2",
 		"unified": "^10.1.2"
 	},
 	"devDependencies": {
@@ -53,7 +54,7 @@
 		"postcss": "^8.4.16",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
-		"postcss-preset-env": "^7.8.0",
+		"postcss-preset-env": "^7.8.2",
 		"tailwindcss": "^3.1.8",
 		"typescript": "4.7.4"
 	},
