--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.27.2",
 		"classnames": "^2.3.2",
 		"cmdk": "^0.1.20",
+		"framer-motion": "^7.5.1",
 		"html-react-parser": "^3.0.4",
 		"next": "12.2.5",
 		"ramda": "^0.28.0",
