feat(cms): docker setup update and kirby update

--- a/apps/cms/deploy/local/Caddyfile
+++ b/apps/cms/deploy/local/Caddyfile
@@ -1,6 +1,7 @@
 localhost, {$KIRBY_HOST} {
 	root * /srv
   encode gzip
-  php_fastcgi php-fpm:9000
   tls internal
+  file_server
+  php_fastcgi php-fpm:9000
 }
