--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,14 @@
 	},
 	"dependencies": {
 		"@code-hike/mdx": "^0.7.4",
-		"@codesandbox/sandpack-react": "^1.8.6",
-		"@codesandbox/sandpack-themes": "^1.6.0",
+		"@codesandbox/sandpack-react": "^1.15.2",
+		"@codesandbox/sandpack-themes": "^1.15.2",
+		"@radix-ui/react-icons": "^1.1.1",
 		"@tailwindcss/typography": "^0.5.7",
 		"axios": "^0.27.2",
 		"classnames": "^2.3.2",
 		"cmdk": "^0.1.20",
-		"framer-motion": "^7.5.1",
+		"framer-motion": "^7.6.1",
 		"html-react-parser": "^3.0.4",
 		"next": "12.2.5",
 		"ramda": "^0.28.0",
@@ -34,7 +35,7 @@
 		"remark-parse": "^10.0.1",
 		"remark-rehype": "^10.1.0",
 		"shiki": "^0.10.1",
-		"swiper": "^8.4.2",
+		"swiper": "^8.4.4",
 		"unified": "^10.1.2"
 	},
 	"devDependencies": {
@@ -43,7 +44,7 @@
 		"@types/dompurify": "^2.3.4",
 		"@types/mdast": "^3.0.10",
 		"@types/node": "18.6.3",
-		"@types/ramda": "^0.28.15",
+		"@types/ramda": "^0.28.18",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
 		"@types/react-syntax-highlighter": "^15.5.5",
@@ -52,11 +53,11 @@
 		"eslint": "8.21.0",
 		"eslint-config-next": "12.2.3",
 		"isomorphic-dompurify": "^0.20.0",
-		"postcss": "^8.4.16",
+		"postcss": "^8.4.18",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
 		"postcss-preset-env": "^7.8.2",
-		"tailwindcss": "^3.1.8",
+		"tailwindcss": "^3.2.1",
 		"typescript": "4.7.4"
 	},
 	"type": "module"
