--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
 		"@codesandbox/sandpack-react": "^1.15.2",
 		"@codesandbox/sandpack-themes": "^1.15.2",
 		"@radix-ui/react-icons": "^1.1.1",
+		"@sindresorhus/slugify": "^2.1.1",
 		"@tailwindcss/typography": "^0.5.7",
 		"axios": "^0.27.2",
 		"classnames": "^2.3.2",
@@ -36,7 +37,8 @@
 		"remark-rehype": "^10.1.0",
 		"shiki": "^0.10.1",
 		"swiper": "^8.4.4",
-		"unified": "^10.1.2"
+		"unified": "^10.1.2",
+		"valtio": "^1.7.4"
 	},
 	"devDependencies": {
 		"@radialarray/eslint-config-custom": "*",
