--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,15 +10,15 @@
 	},
 	"dependencies": {
 		"@code-hike/mdx": "^0.7.4",
-		"@codesandbox/sandpack-react": "^1.15.2",
-		"@codesandbox/sandpack-themes": "^1.15.2",
+		"@codesandbox/sandpack-react": "^1.17.0",
+		"@codesandbox/sandpack-themes": "^1.17.0",
 		"@radix-ui/react-icons": "^1.1.1",
 		"@sindresorhus/slugify": "^2.1.1",
-		"@tailwindcss/typography": "^0.5.7",
+		"@tailwindcss/typography": "^0.5.8",
 		"axios": "^0.27.2",
 		"classnames": "^2.3.2",
 		"cmdk": "^0.1.20",
-		"framer-motion": "^7.6.1",
+		"framer-motion": "^7.6.5",
 		"html-react-parser": "^3.0.4",
 		"next": "13.0.2",
 		"ramda": "^0.28.0",
@@ -35,23 +35,24 @@
 		"remark": "^14.0.2",
 		"remark-parse": "^10.0.1",
 		"remark-rehype": "^10.1.0",
+		"sharp": "^0.31.2",
 		"shiki": "^0.10.1",
 		"swiper": "^8.4.4",
 		"unified": "^10.1.2",
-		"valtio": "^1.7.4"
+		"valtio": "^1.7.5"
 	},
 	"devDependencies": {
-		"@radialarray/eslint-config-custom": "*",
-		"@radialarray/tailwind-config": "*",
+		"eslint-config-custom": "workspace:*",
+		"tailwind-config": "workspace:*",
 		"@types/dompurify": "^2.3.4",
 		"@types/mdast": "^3.0.10",
 		"@types/node": "18.6.3",
-		"@types/ramda": "^0.28.18",
+		"@types/ramda": "^0.28.19",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
 		"@types/react-syntax-highlighter": "^15.5.5",
 		"@types/unist": "^2.0.6",
-		"cssnano": "^5.1.13",
+		"cssnano": "^5.1.14",
 		"eslint": "8.21.0",
 		"eslint-config-next": "13.0.2",
 		"isomorphic-dompurify": "^0.20.0",
@@ -59,7 +60,7 @@
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
 		"postcss-preset-env": "^7.8.2",
-		"tailwindcss": "^3.2.1",
+		"tailwindcss": "^3.2.3",
 		"typescript": "4.7.4"
 	},
 	"type": "module"
