--- a/package.json
+++ b/package.json
@@ -3,32 +3,27 @@
 	"version": "0.0.1",
 	"description": "",
 	"private": true,
-	"workspaces": [
-		"apps/*",
-		"packages/*"
-	],
 	"scripts": {
-		"build": "turbo run build",
-		"dev": "turbo run dev --parallel",
-		"lint": "turbo run lint",
+		"build": "pnpm --stream -r run build",
+		"dev": "pnpm --stream -r run dev",
+		"lint": "pnpm --stream -r run lint",
 		"format": "prettier --write \"**/*.{css,html,json,js,jsx,ts,tsx,md}\"",
 		"prepare": "husky install"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.38.1",
-		"@typescript-eslint/parser": "^5.38.1",
+		"@typescript-eslint/eslint-plugin": "^5.43.0",
+		"@typescript-eslint/parser": "^5.43.0",
 		"commitizen": "^4.2.5",
 		"cz-conventional-changelog": "^3.3.0",
-		"dotenv": "^16.0.2",
-		"eslint": "^8.24.0",
-		"eslint-config-custom": "^0.0.0",
+		"dotenv": "^16.0.3",
+		"eslint": "^8.28.0",
+		"eslint-config-custom": "workspace:0.0.0",
 		"eslint-config-prettier": "^8.5.0",
-		"husky": "^8.0.1",
+		"husky": "^8.0.2",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
-		"tslib": "^2.4.0",
-		"turbo": "^1.5.4",
-		"typescript": "^4.8.4"
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.3"
 	},
 	"engines": {
 		"npm": ">=7.0.0",
