build(cms): add deployment configs for hfg network

--- a/deploy/hfg/Caddyfile
+++ b/deploy/hfg/Caddyfile
@@ -1,7 +1,7 @@
-localhost, {$KIRBY_HOST} {
+:80 {
 	root * /srv
   encode gzip
   tls internal
   file_server
-  php_fastcgi php-fpm:9000
+  php_fastcgi cms_php_fpm:9000
 }
