build(Dockerfile): add apt-transport-https
stack fails to deploy on server with error message: returned a non-zero code: 100 : exit status 1

--- a/deploy/hfg/Dockerfile
+++ b/deploy/hfg/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:8-fpm
 
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update -y && apt-get install -y \
+  apt-transport-https \
   libfreetype6-dev \
   libjpeg62-turbo-dev \
   libpng-dev \
