build: change cifs file volume

--- a/deploy/hfg/docker-compose.yml
+++ b/deploy/hfg/docker-compose.yml
@@ -62,8 +62,10 @@ services:
 
 volumes:
   codelibrary:
-    external: true
-
+    driver_opts:
+      type: cifs
+      o: 'username=[${BACKEND_SHARE_USER}],password=[${BACKEND_SHARE_PASSWORD}]'
+      device: '//cifs://iot-share/Share_CodeLibrary'
 networks:
   default:
   traefik-dynamic:
