--- a/deploy/hfg/docker-compose.yml
+++ b/deploy/hfg/docker-compose.yml
@@ -63,11 +63,11 @@ services:
 volumes:
   codelibrary:
     name: codelibrary
-    driver: local
     driver_opts:
       type: cifs
-      device: '//${BACKEND_SHARE_REMOTE_DOMAIN}/${BACKEND_SHARE_PATH_TO_LIBRARY}'
-      o: 'addr=${BACKEND_SHARE_REMOTE_HOST},username=${BACKEND_SHARE_USER},password=${BACKEND_SHARE_PASSWORD},file_mode=0777,dir_mode=0777,vers=3.0'
+      o: 'username=${BACKEND_SHARE_USER},password=${BACKEND_SHARE_PASSWORD}'
+      device: '//${BACKEND_SHARE_REMOTE_HOST}/${BACKEND_SHARE_PATH_TO_LIBRARY}'
+
 networks:
   default:
   traefik-dynamic:
