--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,16 +9,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@code-hike/mdx": "^0.7.4",
 		"@codesandbox/sandpack-react": "^1.17.0",
 		"@codesandbox/sandpack-themes": "^1.17.0",
-		"@radix-ui/react-icons": "^1.1.1",
 		"@sindresorhus/slugify": "^2.1.1",
 		"@tailwindcss/typography": "^0.5.8",
 		"axios": "^0.27.2",
 		"classnames": "^2.3.2",
 		"cmdk": "^0.1.20",
-		"framer-motion": "^7.6.7",
+		"framer-motion": "^7.6.9",
 		"html-react-parser": "^3.0.4",
 		"next": "13.0.2",
 		"ramda": "^0.28.0",
@@ -35,6 +33,7 @@
 		"remark": "^14.0.2",
 		"remark-parse": "^10.0.1",
 		"remark-rehype": "^10.1.0",
+		"sanitize-html": "^2.7.3",
 		"sharp": "^0.31.2",
 		"shiki": "^0.10.1",
 		"swiper": "^8.4.5",
@@ -49,6 +48,7 @@
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
 		"@types/react-syntax-highlighter": "^15.5.5",
+		"@types/sanitize-html": "^2.6.2",
 		"@types/unist": "^2.0.6",
 		"cssnano": "^5.1.14",
 		"eslint": "8.21.0",
@@ -58,6 +58,7 @@
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
 		"postcss-preset-env": "^7.8.3",
+		"react-feather": "^2.0.10",
 		"tailwindcss": "^3.2.4",
 		"typescript": "4.7.4"
 	}
