--- a/deploy/local-cifs-custom-kirby/docker-compose.yml
+++ b/deploy/local-cifs-custom-kirby/docker-compose.yml
@@ -16,16 +16,19 @@ services:
   # CMS
   cms_caddy:
     container_name: cms_caddy
-    image: caddy:2.6.2
+    # image: kirby-docker:latest
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    env_file:
+      - ./.env
     restart: unless-stopped
     networks:
-      - default
-      - traefik-dynamic
+      - my-bridge-network
+    ports:
+      - '80:80'
     volumes:
       - codelibrary:/srv/
-      - ./deploy/hfg/Caddyfile:/etc/caddy/Caddyfile
-    depends_on:
-      - cms_php_fpm
     labels:
       - 'traefik.enable=true'
       - 'traefik.http.routers.codelibrary.rule=Host(`${BACKEND_HOST}`)'
@@ -36,40 +39,14 @@ services:
       # No indexation eg. google
       - 'traefik.http.middlewares.traefik-headers.headers.customresponseheaders.X-Robots-Tag=none,noarchive,nosnippet,notranslate,noimageindex'
 
-  cms_composer_installation:
-    container_name: cms_composer_installation
-    image: composer
-    user: '1000:1000'
-    networks:
-      - default
-    volumes:
-      - codelibrary:/app
-    command: composer install --ignore-platform-reqs
-
-  cms_php_fpm:
-    container_name: cms_php_fpm
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: unless-stopped
-    networks:
-      - default
-    volumes:
-      - codelibrary:/srv/
-      - ./.user.ini:/usr/local/etc/php/conf.d/.user.ini
-    depends_on:
-      - cms_composer_installation
-
 volumes:
   codelibrary:
     name: codelibrary
     driver: local
     driver_opts:
-      type: cifs
-      o: 'username=${BACKEND_SHARE_USER},password=${BACKEND_SHARE_PASSWORD},vers=3.0,rw'
+      type: 'cifs'
       device: '//${BACKEND_SHARE_REMOTE_DOMAIN}/${BACKEND_SHARE_PATH_TO_LIBRARY}'
-
+      o: 'addr=${BACKEND_SHARE_REMOTE_IP},username=${BACKEND_SHARE_USER},password=${BACKEND_SHARE_PASSWORD}'
 networks:
-  default:
-  traefik-dynamic:
+  my-bridge-network:
     external: true
