--- a/deploy/local-cifs/docker-compose.yml
+++ b/deploy/local-cifs/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   # Frontend
-  # w eb:
+  # web:
   #   container_name: web
   #   build:
   #     context: .
@@ -19,12 +19,12 @@ services:
     image: caddy:2.6.2
     restart: unless-stopped
     networks:
-      - default
+      - my-bridge-network
     ports:
       - '80:80'
       - '443:443'
     volumes:
-      - ../../apps/cms/:/srv/
+      - codelibrary:/srv/
       - ./Caddyfile:/etc/caddy/Caddyfile
     env_file:
       - ./.env
@@ -36,26 +36,37 @@ services:
     image: composer
     user: '1000:1000'
     networks:
-      - default
+      - my-bridge-network
     volumes:
-      - ../../apps/cms/:/app
+      - codelibrary:/app
     command: composer install --ignore-platform-reqs
 
   cms_php_fpm:
     container_name: cms_php_fpm
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
     restart: unless-stopped
     networks:
-      - default
+      - my-bridge-network
     env_file:
       - ./.env
     volumes:
-      - ../../apps/cms/:/srv/
+      - codelibrary:/srv/
       - ./.user.ini:/usr/local/etc/php/conf.d/.user.ini
-      - ./phpinfo.php:/srv/phpinfo.php
     depends_on:
       - cms_composer_installation
+volumes:
+  codelibrary:
+    name: codelibrary
+    driver: local
+    driver_opts:
+      type: 'cifs'
+      device: '//${BACKEND_SHARE_REMOTE_DOMAIN}/${BACKEND_SHARE_PATH_TO_LIBRARY}'
+      o: 'addr=${BACKEND_SHARE_REMOTE_IP},username=${BACKEND_SHARE_USER},password=${BACKEND_SHARE_PASSWORD}'
 networks:
-  default:
+  my-bridge-network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: '172.42.238.0/24'
