--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -1,28 +1,32 @@
-FROM php:8.1-fpm-alpine
+FROM php:8.1.13-fpm-alpine
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
+# XDEBUG Version
+ENV XDEBUG_VERSION=3.2.0
 
-# RUN apk add --no-cache autoconf openssl-dev pcre-dev icu-dev zlib-dev freetype libzip-dev libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev && \
-#   docker-php-ext-configure gd --with-freetype --with-jpeg && \
-#   docker-php-ext-install -j${NPROC} gd bcmath intl opcache zip sockets && \
-#   # apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev && \
-#   mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+RUN apk add --no-cache --update linux-headers libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev libwebp-dev autoconf g++ make
+RUN pecl install xdebug-${XDEBUG_VERSION}
+RUN docker-php-ext-configure gd \
+  --with-webp \
+  --with-jpeg \
+  --with-freetype 
 
-RUN apk add --no-cache libpng libpng-dev && docker-php-ext-install gd && apk del libpng-dev && \
-  mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+RUN docker-php-ext-install gd
+RUN docker-php-ext-enable xdebug
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
+
+# SETUP PHP-FPM CONFIG SETTINGS (max_children / max_requests)
+RUN echo 'pm = dynamic' >> /usr/local/etc/php-fpm.d/zz-docker.conf && \
+  echo 'pm.start_servers = 5' >> /usr/local/etc/php-fpm.d/zz-docker.conf && \
+  echo 'pm.max_children = 50' >> /usr/local/etc/php-fpm.d/zz-docker.conf && \
+  echo 'pm.max_spare_servers = 10' >> /usr/local/etc/php-fpm.d/zz-docker.conf && \
+  echo 'pm.min_spare_servers = 5' >> /usr/local/etc/php-fpm.d/zz-docker.conf && \
+  echo 'pm.process_idle_timeout = 10s;' >> /usr/local/etc/php-fpm.d/zz-docker.conf && \
+  echo 'pm.max_requests = 500' >> /usr/local/etc/php-fpm.d/zz-docker.conf
 
 WORKDIR /srv
-
-# Set user and group
-# ARG USER=default
-# Create the user
-# add new user
-# RUN adduser -D $USER \
-#   && mkdir -p /etc/sudoers.d \
-#   && echo "$USER ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/$USER \
-#   && chmod 0440 /etc/sudoers.d/$USER
 
 COPY composer.json composer.lock ./
 
@@ -31,6 +35,3 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 RUN composer install --no-dev --optimize-autoloader --no-scripts --no-plugins --prefer-dist --no-progress --no-interaction
 
 COPY . .
-
-# ENV APP_ENV=prod
-# ENV PORT=80
