--- a/apps/cms/composer.json
+++ b/apps/cms/composer.json
@@ -25,7 +25,8 @@
 		"php": ">=7.4.0 <8.2.0",
 		"getkirby/cms": "^3.9",
 		"getkirby/kql": "^2.0",
-		"bnomei/kirby3-dotenv": "^2.0"
+		"bnomei/kirby3-dotenv": "^2.0",
+		"belugadigital/kirby-navigation": "^3.0"
 	},
 	"scripts": {
 		"start": [
