--- a/deploy/local/docker-compose.yml
+++ b/deploy/local/docker-compose.yml
@@ -18,16 +18,15 @@ services:
     container_name: 'codelibrary'
     image: caddy:2.6.2
     restart: unless-stopped
+    ports:
+      - 80:80
+      - 443:443
     depends_on:
       - php
     volumes:
       - ../../apps/cms:/srv
       - ./.env.cms:/srv/.env:ro
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.codelibrary-backend.rule=Host(`library-backend.localhost`)'
-      - 'traefik.http.services.codelibrary-backend.loadbalancer.server.port=80'
     networks:
       - internal
 
@@ -45,25 +44,6 @@ services:
   #     - 'traefik.http.routers.codelibrary-frontend.rule=Host(`library-frontend.localhost`)'
   #     - 'traefik.http.services.codelibrary-frontend.loadbalancer.server.port=3000'
 
-  traefik:
-    container_name: 'loadbalancer'
-    image: 'traefik:v2.9'
-    restart: unless-stopped
-    ports:
-      - '80:80'
-      - '443:443'
-    networks:
-      - internal
-    depends_on:
-      - codelibrary
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.backend=traefik'
-      - 'traefik.http.routers.api.entrypoints=web'
-      - 'traefik.http.routers.api.rule=Host(`traefik.localhost`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))'
-      - 'traefik.http.routers.api.service=api@internal'
-    volumes:
-      - '/var/run/docker.sock:/var/run/docker.sock:ro'
-      - ./traefik.yml:/traefik.yml:ro
 networks:
   internal:
+  proxy:
