--- a/deploy/local/traefik.yml
+++ b/deploy/local/traefik.yml
@@ -5,11 +5,20 @@ api:
   insecure: true
   dashboard: true
 
-entryPoints:
-  web:
-    address: ':80'
-
 providers:
   docker:
     endpoint: 'unix:///var/run/docker.sock'
+    watch: true
     exposedByDefault: false
+
+entryPoints:
+  web:
+    address: ':80'
+    http:
+      redirections:
+        entryPoint:
+          to: websecure
+          scheme: https
+          permanent: true
+  websecure:
+    address: ':443'
