--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,10 +18,10 @@
 		"cmdk": "^0.1.22",
 		"framer-motion": "^9.0.3",
 		"html-react-parser": "^3.0.9",
-		"next": "13.0.2",
+		"next": "^13.1.6",
 		"ramda": "^0.28.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-markdown": "^8.0.5",
 		"react-player": "^2.11.2",
 		"react-syntax-highlighter": "^15.5.0",
@@ -50,7 +50,7 @@
 		"@types/react-syntax-highlighter": "^15.5.6",
 		"@types/sanitize-html": "^2.8.0",
 		"@types/unist": "^2.0.6",
-		"cssnano": "^5.1.14",
+		"cssnano": "^5.1.15",
 		"eslint": "8.21.0",
 		"eslint-config-next": "13.0.2",
 		"isomorphic-dompurify": "^0.20.0",
