--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,18 +12,38 @@
 		"swiper": "^9.0.5"
 	},
 	"devDependencies": {
-		"@codesandbox/sandpack-react": "^1.20.9",
-		"@codesandbox/sandpack-themes": "^1.19.0",
+		"@codesandbox/sandpack-react": "^2.0.6",
+		"@codesandbox/sandpack-themes": "^2.0.1",
 		"@sindresorhus/slugify": "^2.2.0",
-		"axios": "^0.27.2",
+		"@tailwindcss/typography": "^0.5.9",
+		"@types/dompurify": "^2.4.0",
+		"@types/mdast": "^3.0.10",
+		"@types/node": "^18.14.0",
+		"@types/ramda": "^0.28.23",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@types/react-syntax-highlighter": "^15.5.6",
+		"@types/sanitize-html": "^2.8.0",
+		"@types/unist": "^2.0.6",
+		"autoprefixer": "^10.4.13",
+		"axios": "^1.3.3",
 		"classnames": "^2.3.2",
 		"cmdk": "^0.1.22",
-		"framer-motion": "^9.0.3",
+		"cssnano": "^5.1.15",
+		"eslint": "^8.34.0",
+		"eslint-config-next": "^13.1.6",
+		"framer-motion": "^9.0.4",
 		"html-react-parser": "^3.0.9",
+		"isomorphic-dompurify": "^1.0.0",
 		"next": "^13.1.6",
+		"postcss": "^8.4.21",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-import": "^15.1.0",
+		"postcss-preset-env": "^8.0.1",
 		"ramda": "^0.28.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-feather": "^2.0.10",
 		"react-markdown": "^8.0.5",
 		"react-player": "^2.11.2",
 		"react-syntax-highlighter": "^15.5.0",
@@ -35,32 +55,12 @@
 		"remark": "^14.0.2",
 		"remark-parse": "^10.0.1",
 		"remark-rehype": "^10.1.0",
-		"sanitize-html": "^2.9.0",
+		"sanitize-html": "^2.10.0",
 		"sharp": "^0.31.3",
-		"shiki": "^0.10.1",
+		"shiki": "^0.14.1",
+		"tailwindcss": "^3.2.7",
+		"typescript": "^4.9.5",
 		"unified": "^10.1.2",
-		"valtio": "^1.10.2",
-		"@types/dompurify": "^2.4.0",
-		"@types/mdast": "^3.0.10",
-		"@types/node": "18.6.3",
-		"@types/ramda": "^0.28.23",
-		"@types/react": "18.0.15",
-		"@types/react-dom": "18.0.6",
-		"@types/react-syntax-highlighter": "^15.5.6",
-		"@types/sanitize-html": "^2.8.0",
-		"@types/unist": "^2.0.6",
-		"autoprefixer": "^10.4.13",
-		"cssnano": "^5.1.15",
-		"eslint": "8.21.0",
-		"eslint-config-next": "13.0.2",
-		"isomorphic-dompurify": "^0.20.0",
-		"postcss": "^8.4.21",
-		"postcss-flexbugs-fixes": "^5.0.2",
-		"postcss-import": "^14.1.0",
-		"postcss-preset-env": "^7.8.3",
-		"react-feather": "^2.0.10",
-		"tailwindcss": "^3.2.6",
-		"@tailwindcss/typography": "^0.5.9",
-		"typescript": "4.7.4"
+		"valtio": "^1.10.2"
 	}
 }
