fix(cms): wrong folder volume mounts in docker-compose
Volume mount /srv overwrites all files in /srv provided by the dockerfile. Need to be more specific with the mounts.

--- a/deploy/local/docker-compose.yml
+++ b/deploy/local/docker-compose.yml
@@ -7,7 +7,11 @@ services:
       context: ../../apps/cms
     restart: unless-stopped
     volumes:
-      - ../../apps/cms:/srv
+      - ../../apps/cms/assets:/srv/assets/
+      - ../../apps/cms/media:/srv/media/
+      - ../../apps/cms/site:/srv/site/
+      - ../../apps/cms/storage:/srv/storage/
+      - ../../apps/cms/index.php:/srv/index.php:ro
     networks:
       - internal
     labels:
@@ -24,7 +28,11 @@ services:
     depends_on:
       - php
     volumes:
-      - ../../apps/cms:/srv
+      - ../../apps/cms/assets:/srv/assets/
+      - ../../apps/cms/media:/srv/media/
+      - ../../apps/cms/site:/srv/site/
+      - ../../apps/cms/storage:/srv/storage/
+      - ../../apps/cms/index.php:/srv/index.php:ro
       - ./.env.cms:/srv/.env:ro
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
     networks:
