--- a/apps/web/docker-compose.yml
+++ b/apps/web/docker-compose.yml
@@ -1,14 +1,11 @@
-version: '3.7'
-
+version: '3.8'
 services:
+  # Frontend NextJS
   web:
-    container_name: web
+    container_name: codelibrary_web
     build:
-      context: .
+      context: ./
       dockerfile: ./Dockerfile
-    volumes:
-      - .:/app
-      - /app/node_modules
-    restart: always
+    restart: unless-stopped
     ports:
       - 3000:3000
