feat(web): add next/link to anchor tags in text

--- a/apps/cms/site/blueprints/pages/default.yml
+++ b/apps/cms/site/blueprints/pages/default.yml
@@ -19,7 +19,7 @@ columns:
     sections:
       pages:
         type: pages
-        template: default
+        template: layout
       files:
         type: files
 
