--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
 		"@types/node": "^18.14.0",
 		"@types/ramda": "^0.28.23",
 		"@types/react": "^18.0.28",
+		"@types/react-copy-to-clipboard": "^5.0.4",
 		"@types/react-dom": "^18.0.11",
 		"@types/react-syntax-highlighter": "^15.5.6",
 		"@types/sanitize-html": "^2.8.0",
@@ -39,6 +40,7 @@
 		"postcss-preset-env": "^8.0.1",
 		"ramda": "^0.28.0",
 		"react": "^18.2.0",
+		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "^18.2.0",
 		"react-feather": "^2.0.10",
 		"react-markdown": "^8.0.5",
