feat(cms): environment variable changes urls
Makes for an easier deployment experience

--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -1,6 +1,6 @@
-# Backend (Kirby)
-BACKEND_HOST=backend.localhost
+# Backend (CMS Kirby)
+BACKEND_URL=https://backend.localhost
 KIRBY_PANEL_INSTALL=true
 KIRBY_DEBUG=true
-# Frontend (NextJS)
-FRONTEND_HOST=frontend.localhost
+# Frontend (Web NextJS)
+FRONTEND_URL=http://localhost:3000
