--- a/apps/cms/site/blueprints/pages/article.yml
+++ b/apps/cms/site/blueprints/pages/article.yml
@@ -2,7 +2,7 @@ title: Single-Column Page
 
 
 options:
-  preview: "{{ page.frontendUrl }}"
+  preview: "{{ kirby.option('frontendUrl') }}/{{ page.uri }}"
 
 
 columns:
