--- a/apps/cms/site/blueprints/pages/default.yml
+++ b/apps/cms/site/blueprints/pages/default.yml
@@ -1,7 +1,7 @@
 title: Default Page
 
 options:
-  preview: http://localhost:3000/
+  preview: "{{ kirby.option('frontendUrl') }}/{{ page.uri }}"
 
 
 columns:
