--- a/apps/cms/site/blueprints/pages/layout.yml
+++ b/apps/cms/site/blueprints/pages/layout.yml
@@ -1,7 +1,7 @@
 title: Multi-Column Page
 
 options:
-  preview: "http://localhost:3000/{{ page.uri }}"
+  preview: "{{ kirby.option('frontendUrl') }}/{{ page.uri }}"
 
 columns:
   main:
