--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,31 +9,31 @@
 		"lint": "next lint"
 	},
 	"devDependencies": {
-		"@codesandbox/sandpack-react": "^2.0.6",
-		"@codesandbox/sandpack-themes": "^2.0.1",
+		"@codesandbox/sandpack-react": "^2.1.10",
+		"@codesandbox/sandpack-themes": "^2.0.21",
 		"@sindresorhus/slugify": "^2.2.0",
 		"@tailwindcss/typography": "^0.5.9",
-		"@types/dompurify": "^2.4.0",
-		"@types/mdast": "^3.0.10",
-		"@types/node": "^18.14.0",
+		"@types/dompurify": "^3.0.0",
+		"@types/mdast": "^3.0.11",
+		"@types/node": "^18.15.5",
 		"@types/ramda": "^0.28.23",
 		"@types/react": "^18.0.28",
 		"@types/react-copy-to-clipboard": "^5.0.4",
 		"@types/react-dom": "^18.0.11",
 		"@types/react-syntax-highlighter": "^15.5.6",
-		"@types/sanitize-html": "^2.8.0",
+		"@types/sanitize-html": "^2.9.0",
 		"@types/unist": "^2.0.6",
-		"autoprefixer": "^10.4.13",
-		"axios": "^1.3.3",
+		"autoprefixer": "^10.4.14",
+		"axios": "^1.3.4",
 		"classnames": "^2.3.2",
-		"cmdk": "^0.1.22",
+		"cmdk": "^0.2.0",
 		"cssnano": "^5.1.15",
-		"eslint": "^8.34.0",
-		"eslint-config-next": "^13.1.6",
-		"framer-motion": "^9.0.4",
-		"html-react-parser": "^3.0.9",
-		"isomorphic-dompurify": "^1.0.0",
-		"next": "^13.2.1",
+		"eslint": "^8.36.0",
+		"eslint-config-next": "^13.2.4",
+		"framer-motion": "^10.8.3",
+		"html-react-parser": "^3.0.12",
+		"isomorphic-dompurify": "^1.2.0",
+		"next": "^13.2.4",
 		"postcss": "^8.4.21",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^15.1.0",
@@ -43,8 +43,8 @@
 		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "^18.2.0",
 		"react-feather": "^2.0.10",
-		"react-markdown": "^8.0.5",
-		"react-player": "^2.11.2",
+		"react-markdown": "^8.0.6",
+		"react-player": "^2.12.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-document": "^6.1.0",
 		"rehype-format": "^4.0.1",
@@ -58,11 +58,12 @@
 		"sharp": "^0.31.3",
 		"shiki": "^0.14.1",
 		"tailwindcss": "^3.2.7",
-		"typescript": "^4.9.0",
+		"typescript": "^5.0.2",
 		"unified": "^10.1.2",
-		"valtio": "^1.10.2"
+		"valtio": "^1.10.3"
 	},
 	"dependencies": {
-		"swiper": "^9.0.5"
+		"react-intersection-observer": "^9.4.3",
+		"swiper": "^9.1.1"
 	}
 }
