--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
 		"@codesandbox/sandpack-react": "^2.1.11",
 		"@codesandbox/sandpack-themes": "^2.0.21",
 		"@sindresorhus/slugify": "^2.2.0",
+		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/dompurify": "^3.0.0",
 		"@types/mdast": "^3.0.11",
