--- a/apps/web/docker-compose.yml
+++ b/apps/web/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       context: ./
       dockerfile: ./Dockerfile
     restart: unless-stopped
+    env_file:
+      - .env.local
     ports:
       - 3000:3000
