feat(web): homepage layout

--- a/apps/cms/site/blueprints/pages/layout.yml
+++ b/apps/cms/site/blueprints/pages/layout.yml
@@ -94,3 +94,9 @@ columns:
             type: users
             multiple: false
             required: true
+          highlight:
+            label: Highlight
+            type: toggle
+            text: 
+              - "no"
+              - "yes"
