--- a/apps/web/docker-compose.yml
+++ b/apps/web/docker-compose.yml
@@ -4,10 +4,15 @@ services:
   web:
     container_name: codelibrary_web
     build:
-      context: ./
-      dockerfile: ./Dockerfile
-    restart: unless-stopped
+      context: .
+      dockerfile: Dockerfile
+      args:
+        API_IMAGE_HOST: ${API_IMAGE_HOST}
+        API_HOST: ${API_HOST}
+        API_USERNAME: ${API_USERNAME}
+        API_PASSWORD: ${API_PASSWORD}
     env_file:
-      - .env.local
+      - .env
+    restart: unless-stopped
     ports:
       - 3000:3000
