--- a/apps/cms/site/blueprints/site.yml
+++ b/apps/cms/site/blueprints/site.yml
@@ -9,21 +9,40 @@ columns:
     sections:
       pages:
         type: pages
+        layout: list
+        template: layout
       navigation:
         type: fields
         fields:
           navigation:
             label: Navigation
             type: navigation
-            levels: 5
-            help: Description of menu or where it is used
+            levels: 1
+            help: Main navigation
+          footerInternal:
+            label: Footer Internal Links
+            type: navigation
+            levels: 1
+            help: Footer internal navigation in the first column
+          footerExternal:
+            label: Footer External Links
+            type: navigation
+            levels: 1
+            help: Footer external navigation links e.g. "https://hfg-gmuend.de"
   meta:
     width: 1/3
     type: fields
     fields:
-      tags: # a list of all tags
-        type: tags
-        label: Tags/Kategorien
+      categories:
+        type: structure
+        label: Kategorien
+        fields:
+          title:
+            label: Titel
+            type: text
+          description:
+            label: Beschreibung
+            type: textarea
       languages:
         type: tags
         label: Programming Languages
