--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -2,5 +2,5 @@
 API_HOST=example.com
 # Your image host could be different from your api host.
 API_IMAGE_HOST=example.com
-API_USER=username
+API_USERNAME=username
 API_PASSWORD=password
