--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
 # Web Frontend (NextJS)
-API_HOST=library-backend.localhost/api/query
-# Your image host could be different from your api host.
-API_IMAGE_HOST=library-backend.localhost
-API_USERNAME=apiuser
+# API Endpoint
+API_HOST=codelibrary/api/query
+# Image Host: Your image host could be different from your api host.
+API_IMAGE_HOST=codelibrary.localhost
+# Kirby Username for the API Authorization
+API_USERNAME=api
 API_PASSWORD=password
+
 # Backend (CMS Kirby)
-BACKEND_URL=https://library-backend.localhost
+# Backend URL, but there's also a wildcard if you host behind a reverse proxy
+BACKEND_URL=https://codelibrary.localhost
 KIRBY_PANEL_INSTALL=true
 KIRBY_DEBUG=true
-# Frontend (Web NextJS)
+# Frontend URL, so that preview links in Kirby can link to the correct frontend preview.
 FRONTEND_URL=http://localhost:3000
