fix(web): env vars for api_host changed url

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Web Frontend (NextJS)
 # API Endpoint
-API_HOST=codelibrary/api/query
+API_HOST=https://codelibrary/api/query
 # Image Host: Your image host could be different from your api host.
 API_IMAGE_HOST=codelibrary.localhost
 # Kirby Username for the API Authorization
