--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -1,5 +1,5 @@
 # Web Frontend (NextJS)
-API_HOST=example.com
+API_HOST=https://example.com
 # Your image host could be different from your api host.
 API_IMAGE_HOST=example.com
 API_USERNAME=username
