fix(cms): category not required anymore

--- a/apps/cms/site/blueprints/pages/layout.yml
+++ b/apps/cms/site/blueprints/pages/layout.yml
@@ -54,7 +54,7 @@ columns:
         type: fields
         fields:
           categories:
-            required: true
+            # required: true
             label: Kategorien
             type: multiselect
             accept: options
