ci: env variables do not work outside of steps, github docs seem to be wrong
https://github.com/actions/runner/issues/1189

--- a/.github/workflows/buildimages.yml
+++ b/.github/workflows/buildimages.yml
@@ -25,9 +25,9 @@ jobs:
       matrix:
         include:
           - dockerfile: ./apps/cms/Dockerfile
-            image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            image: ghcr.io/hfg-gmuend/codelibrary-cms
           - dockerfile: ./apps/web/Dockerfile
-            image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            image: ghcr.io/hfg-gmuend/codelibrary-web
     permissions:
       contents: read
       packages: write
